--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800&amp;display=swap');
+
 *{
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+    font-family: Nunito, sans-serif;
 }
 body{
     background-color: white !important;
