--- a/src/css/preLoader.css
+++ b/src/css/preLoader.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800&amp;display=swap');
 
 * {
 	box-sizing: border-box;
@@ -12,6 +13,7 @@ body {
 /* Preloader */
 .container-preloader {
 	align-items:center; cursor: none;  display:flex; height:100%;
+
   justify-content:center; position:fixed; left:0; top:0; width:100%; z-index:900;
 }
 .container-preloader .animation-preloader {
@@ -27,6 +29,9 @@ body {
 .container-preloader .animation-preloader .txt-loading {
   font: bold 5em 'Montserrat', sans-serif;
 	text-align: center;	user-select: none;
+}
+.txt-loading{
+  font-family: Nunito, sans-serif; 
 }
 
 .container-preloader .animation-preloader .txt-loading .preGray:before{
