--- a/src/css/recentEvent.css
+++ b/src/css/recentEvent.css
@@ -1,22 +1,25 @@
 .recentEventContainer {
-    background-color: #8E793E;
-    width: 80%;
-    padding: 20px;
+    border-radius: 50px;
+    border: 3px solid #8E793E;
+    width: 98%;
+    padding: 5px;
+    padding-bottom: 15px;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     gap: 10px;
     flex-wrap: wrap;
-    color: white;
+    color:#8E793E;
     border-radius: 20px;
     margin: 10px auto;
 }
 
 .recentEventPoster img {
     border-radius: 20px;
-    border: 5px solid black;
-    padding: 2px;
+    
     min-width: 300px;
     max-width: 400px;
+   
 }
 
 .recentEventDetails {
@@ -30,6 +33,7 @@
     font-size: 30px;
     font-weight: 1000;
     text-align: center;
+    color: rgb(102, 102, 102);
 }
 
 .recentEventShortDesc {
@@ -40,6 +44,10 @@
     font-size: 20px;
     text-align: justify;
     margin-top: 20px;
+    background-color: #8E793E;
+    color: white;
+    padding: 20px;
+    border-radius: 20px;
 }
 
 .recentEventRegister button:active {
@@ -75,4 +83,26 @@
 .recentEventSeeYou{
     text-align: center;
     font-size: 20px;
+}
+.eventManDetails{
+    font-size: 30px;
+    text-align: center;
+    
+}
+
+.eventManDetails div{
+    background-color: #8E793E;
+    color: white;
+    margin: 10px 0px;
+    border-radius: 30px ;
+    padding: 10px;
+}
+.fontEventCard{
+    padding:0px 10px;
+}
+
+@media only screen and (max-width:1000px){
+    .recentEventContainer{
+        padding-bottom: 5px;
+    }
 }
