--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,11 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800&amp;display=swap');
 
-*{
-    padding: 0px;
-    margin: 0px;
+* {
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
-    font-family: Nunito, sans-serif;
+    font-family: 'Nunito', sans-serif;
 }
-body{
-    background-color: white !important;
+
+body {
+    position: relative; /* Ensure proper positioning for ::after pseudo-element */
+    overflow: auto; /* Hide overflow caused by the ::after pseudo-element */
+}
+
+body::after {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('/public/img/bg2.gif');
+    background-position: top;
+    background-size: cover;
+    background-attachment: fixed;
+    z-index: -1; /* Ensure the ::after pseudo-element stays behind other content */
+    filter: invert(100%); /* Invert colors of the background image */
 }
