--- a/src/css/recentEvent.css
+++ b/src/css/recentEvent.css
@@ -1,108 +1,152 @@
 .recentEventContainer {
-    border-radius: 50px;
-    border: 3px solid #8E793E;
-    width: 98%;
+    border: 1px solid #6c757d;
+    width: 90%;
     padding: 5px;
-    padding-bottom: 15px;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 10px;
-    flex-wrap: wrap;
-    color:#8E793E;
+    justify-content: space-between;
+    gap: 30px;
+    color: #8E793E;
     border-radius: 20px;
     margin: 10px auto;
+    background: transparent;
+    backdrop-filter: blur(10px);
+    padding: 50px;
 }
-
-.recentEventPoster img {
-    border-radius: 20px;
-    
-    min-width: 300px;
-    max-width: 400px;
-   
-}
-
-.recentEventDetails {
-    min-width: 300px;
-    max-width: 500px;
-    display: flex;
-    flex-direction: column;
-}
-
 .recentEventName {
-    font-size: 30px;
+    font-size: 60px;
     font-weight: 1000;
     text-align: center;
     color: rgb(102, 102, 102);
+
 }
 
 .recentEventShortDesc {
     text-align: center;
+    font-size: 30px;
+
+}
+.recentEventPoster{
+    height: 100%;
+    margin: auto;
+}
+.recentEventPoster img {
+    border-radius: 20px;
+    min-width: 200px;
+    max-width: 350px;
+    
+}
+
+.recentEventDetails {
+    min-width: 240px;
+    max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
 
 .recentEventDesc {
     font-size: 20px;
     text-align: justify;
-    margin-top: 20px;
     background-color: #8E793E;
     color: white;
     padding: 20px;
     border-radius: 20px;
+    max-width: 500px;
+    min-width: 200px;
 }
 
-.recentEventRegister button:active {
-     background-color: #8E793E;
-     color: white;
-}
-
-.recentEventRegister button {
-    width: 100%;   
+.recentEventRegister button:active,.recentEventViewMore button:active {
     background-color: white;
+    color: #8E793E;
+}
+
+.recentEventRegister button,.recentEventViewMore button {
+    width: 100%;
+    background-color: #8E793E;
     padding: 10px 0px;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 20px;
     margin-top: 10px;
     cursor: pointer;
-    border: 2px solid white;
+    border: 2px solid #8E793E;
     outline: none;
-    color: #8E793E;
-    font-size: 20px;
+    color: white;
+    font-size: 30px;
     font-weight: 1000;
 }
 
-.recentEventRegisterClosed{
+.recentEventRegisterClosed {
     text-align: center;
     font-size: 30px;
     font-weight: 1000;
     margin-top: 10px;
     color: red;
-    background-color: white;
     padding: 5px 0px;
     border-radius: 10px;
 }
-.recentEventSeeYou{
+.recentEventViewMore{
+   margin-top: 10px;
+}
+
+.recentEventSeeYou {
     text-align: center;
     font-size: 20px;
 }
-.eventManDetails{
+
+.eventManDetails {
     font-size: 30px;
     text-align: center;
-    
 }
 
-.eventManDetails div{
+.eventManDetails div {
     background-color: #8E793E;
     color: white;
     margin: 10px 0px;
-    border-radius: 30px ;
+    border-radius: 20px;
     padding: 10px;
 }
-.fontEventCard{
-    padding:0px 10px;
+
+.fontEventCard {
+    padding: 0px 10px;
 }
 
-@media only screen and (max-width:1000px){
-    .recentEventContainer{
-        padding-bottom: 5px;
+@media only screen and (max-width: 1150px) {
+    .recentEventContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 30px;
+        width: 95%;
+    }
+    .recentEventPoster{
+        display: flex;
+        justify-content: center;
+    }
+    .recentEventRegister button{
+        margin-bottom: 10px;
+    }
+    .recentEventSeeYou{
+        margin-bottom: 10px;
+    }
+
+    .recentEventPoster,
+    .recentEventDetails,
+    .recentEventDesc {
+        width: 100%;
+    }
+}
+@media only screen and (max-width: 480px) {
+    .recentEventName{
+        font-size: 40px;
+    }
+    .recentEventShortDesc{
+        font-size: 25px;
+    }
+
+    .eventManDetails{
+        font-size: 25px;
+    }
+    .recentEventRegister button{
+        font-size: 25px;
     }
 }
