--- a/src/css/app.css
+++ b/src/css/app.css
@@ -19,7 +19,7 @@ body::after {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/public/img/bg2.gif');
+    background-image: url('/img/bg2.gif');
     background-position: top;
     background-size: cover;
     background-attachment: fixed;
