--- a/src/css/certifcatePage.css
+++ b/src/css/certifcatePage.css
@@ -5,6 +5,18 @@
     border-radius: 10px;
     border: none;
 }
+.certificatePageScienceClubHead{
+    color: #8E793E;
+    font-weight: 1000;
+    font-size: 40px;
+    text-transform: uppercase;
+    text-align: center;
+    margin: 20px 0px;
+    color: rgb(102,102,102);
+}
+.certificatePageScienceClubHead span{
+    color: #8E793E;
+}
 .firstContainer,.secondContainer{
     padding: 20px;
     width: 800px;
@@ -82,6 +94,14 @@
     width: 400px;
 }
 
+.certificatePageWinnerPlace{
+    background-color: #8E793E;
+    color: white;
+    padding: 5px 15px;
+    border-radius: 30px;
+    margin-bottom: 5px;
+}
+
 @media only screen and (max-width:900px){
     .firstContainer{
         width: 500px;
@@ -106,7 +126,65 @@
     .certificateIssueDate{
         margin-bottom: 20px ;
     }
+
+    .certifcatePdf iframe{
+        width:450px;
+    }
 }
+@media only screen and (max-width:520px){
+
+
+    .certifcatePdf iframe{
+        width:470px;
+    }
+}
+@media only screen and (max-width:510px){
+    .certifcatePdf iframe{
+        width:450px;
+    }
+}
+@media only screen and (max-width:490px){
+    .certifcatePdf iframe{
+        width:420px;
+    }
+}
+@media only screen and (max-width:470px){
+    .certifcatePdf iframe{
+        width:410px;
+    }
+}
+@media only screen and (max-width:450px){
+    .certifcatePdf iframe{
+        width:390px;
+    }
+}
+@media only screen and (max-width:430px){
+    .certifcatePdf iframe{
+        width:370px;
+    }
+}
+@media only screen and (max-width:410px){
+    .certifcatePdf iframe{
+        width:350px;
+    }
+}
+@media only screen and (max-width:390px){
+    .certifcatePdf iframe{
+        width:330px;
+    }
+}
+@media only screen and (max-width:370px){
+    .certifcatePdf iframe{
+        width:310px;
+    }
+}
+@media only screen and (max-width:350px){
+    .certifcatePdf iframe{
+        width:100%;
+    }
+}
+
+
 
 @media only screen and (max-width:500px){
     .firstContainer{
@@ -122,6 +200,7 @@
     .certifiacatePageViewMoreEvents{
         height: 90px;
     }
+
 }
 @media only screen and (max-width:400px){
     .certifcatePdf iframe{
