--- a/src/css/app.css
+++ b/src/css/app.css
@@ -7,22 +7,6 @@
     font-family: 'Nunito', sans-serif;
 }
 
-body {
-    position: relative; /* Ensure proper positioning for ::after pseudo-element */
-    overflow: auto; /* Hide overflow caused by the ::after pseudo-element */
-}
-
-body::after {
-    content: '';
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('/img/bg2.gif');
-    background-position: top;
-    background-size: cover;
-    background-attachment: fixed;
-    z-index: -1; /* Ensure the ::after pseudo-element stays behind other content */
-    filter: invert(100%); /* Invert colors of the background image */
+body{
+    background: white;
 }
