--- a/src/css/preLoader.css
+++ b/src/css/preLoader.css
@@ -6,7 +6,7 @@
 	padding: 0;
 }
 body {
-	background: #ddd; height:100%;overflow-x: hidden;}	
+	 height:100%;overflow-x: hidden;}	
 .text{color:brown;font-size:220px;text-align:center;}
 .open{color:green;background:#000;padding:10px;border-radius:20px;}
 
